update intro reorganise chapters

--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,27 @@
   langid = {american}
 }
 
+@misc{14:00-17:00ISO92412102019,
+  title = {{{ISO}} 9241-210:2019},
+  shorttitle = {{{ISO}} 9241-210},
+  author = {{14:00-17:00}},
+  journal = {ISO},
+  urldate = {2023-10-06},
+  abstract = {Ergonomics of human-system interaction \textemdash{} Part 210: Human-centred design for interactive systems},
+  howpublished = {https://www.iso.org/standard/77520.html},
+  langid = {english}
+}
+
+@misc{8guildSearchDownloadFree,
+  title = {Search and Download {{Free}} Vector Icons, Stickers, Illustrations, {{UI Kits}} and More},
+  author = {8Guild and {madebyoliver}},
+  journal = {Smashicons | The largest icon set in the world.},
+  urldate = {2023-10-03},
+  abstract = {More free graphic design resources than you can shake a stick at. Get access to over 526,301 icons and thousands of design resources available in PNG, SVG, EPS and SKETCH formats.},
+  howpublished = {http://www.smashicons.com/},
+  langid = {english}
+}
+
 @article{alburyGenderConsolidatedCriteria2021,
   title = {Gender in the Consolidated Criteria for Reporting Qualitative Research ({{COREQ}}) Checklist},
   author = {Albury, Charlotte and Pope, Catherine and Shaw, Sara and Greenhalgh, Trisha and Ziebland, Sue and Martin, Sam and Rai, Tanvi and Chisholm, Alison and Barnes, Rebecca and White, Ashley and Wanat, Marta and Santillo, Marta and Boylan, Anne-marie and Tremblett, Madeline and {Tonkin-crine}, Sarah and Borek, Aleksandra and Sanders, Ruth and Koutoukidis, Dimitrios and Scragg, Jadine and Lee, Charlotte and Russell, Siabhainn and Mikulak, Magdalena and Logan, Mary and Spratt, Tanisha and {Livingston-banks}, Jonathan and Mcniven, Abigall and Stepney, Melissa and Talbot, Amelia and Crocker, Joanna and Powell, John and Paparini, Sara and {Van der westhuizen}, Helene-mari and Walumbe, Jackie and Newhouse, Nicola and Ryan, Sara and Webb, Helena and Mellor, Katie and Potter, Caroline and Butler, Ailsa and Pilbeam, Caitlin},
@@ -527,7 +548,7 @@
   file = {/Users/james/Zotero/storage/BHVV3ZHJ/Davies et al. - 2015 - The SQUIRE Guidelines an evaluation from the fiel.pdf;/Users/james/Zotero/storage/G68XATQ5/Davies et al_2015_The SQUIRE Guidelines.pdf}
 }
 
-@article{dechartresEvolutionPoorReporting2017a,
+@article{dechartresEvolutionPoorReporting2017,
   title = {Evolution of Poor Reporting and Inadequate Methods over Time in 20 920 Randomised Controlled Trials Included in {{Cochrane}} Reviews: Research on Research Study},
   shorttitle = {Evolution of Poor Reporting and Inadequate Methods over Time in 20 920 Randomised Controlled Trials Included in {{Cochrane}} Reviews},
   author = {Dechartres, Agnes and Trinquart, Ludovic and Atal, Ignacio and Moher, David and Dickersin, Kay and Boutron, Isabelle and Perrodeau, Elodie and Altman, Douglas G. and Ravaud, Philippe},
@@ -545,7 +566,8 @@
   copyright = {Published by the BMJ Publishing Group Limited. For permission to use (where not already granted under a licence) please go to http://group.bmj.com/group/rights-licensing/permissions},
   langid = {english},
   pmid = {28596181},
-  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Dechartres et al_2017_Evolution of poor reporting and inadequate methods over time in 20 920.pdf}
+  keywords = {Bias,Humans,Journal Impact Factor,Randomized Controlled Trials as Topic,Reference Standards,Research Design,Review Literature as Topic,Time Factors},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Dechartres et al_2017_Evolution of poor reporting and inadequate methods over time in 20 920.pdf;/Users/james/Zotero/storage/82TIH7QZ/Dechartres et al_2017_Evolution of poor reporting and inadequate methods over time in 20 920.pdf}
 }
 
 @article{dejongMetareviewDemonstratesImproved2021,
@@ -609,6 +631,15 @@
   publisher = {{Institute of Government}}
 }
 
+@misc{DownloadFreeVectors,
+  title = {Download {{Free Vectors}}, {{Images}}, {{Stock Photos}} \& {{Stock Videos}}},
+  journal = {Vecteezy},
+  urldate = {2023-10-03},
+  abstract = {Explore millions of royalty free vectors, images, photos, and videos! Find the perfect graphic, background, illustration, template, or icon for your design.},
+  howpublished = {https://www.vecteezy.com/},
+  langid = {english}
+}
+
 @misc{ecommercefoundationEcommerceBenchmarkRetail,
   title = {Ecommerce {{Benchmark Retail Report}} 2016},
   author = {{Ecommerce Foundation}},
@@ -638,6 +669,27 @@
   urldate = {2022-09-30},
   abstract = {Modern day UX research methods answer a wide range of questions. To help you know when to use which user research method, each of 20 methods is mapped across 3 dimensions and over time within a typical product-development process.},
   howpublished = {https://www.nngroup.com/articles/guide-ux-research-methods/},
+  langid = {english}
+}
+
+@misc{experienceNielsenNormanGroup,
+  title = {Nielsen {{Norman Group}}: {{UX Training}}, {{Consulting}}, \& {{Research}}},
+  shorttitle = {Nielsen {{Norman Group}}},
+  author = {Experience, World Leaders in Research-Based User},
+  journal = {Nielsen Norman Group},
+  urldate = {2023-10-05},
+  abstract = {A leader in the user experience field, NN/g conducts groundbreaking research, trains and certifies UX practitioners, and provides UX consulting to clients.},
+  howpublished = {https://www.nngroup.com/},
+  langid = {english}
+}
+
+@misc{experiencePersonasMakeUsers,
+  title = {Personas {{Make Users Memorable}} for {{Product Team Members}}},
+  author = {Experience, World Leaders in Research-Based User},
+  journal = {Nielsen Norman Group},
+  urldate = {2023-10-06},
+  abstract = {When based on user research, personas support user-centered design throughout a project's lifecycle by making characteristics of key user segments more salient.},
+  howpublished = {https://www.nngroup.com/articles/persona/},
   langid = {english}
 }
 
@@ -694,6 +746,25 @@
   volume = {3},
   number = {1},
   pages = {3--17}
+}
+
+@misc{FreeIconsStickers,
+  title = {Free {{Icons}} and {{Stickers}} - {{Millions}} of Images to Download},
+  journal = {Flaticon},
+  urldate = {2023-10-03},
+  abstract = {Download Free Icons and Stickers for your projects. Images made by and for designers in PNG, SVG, EPS, PSD and CSS formats},
+  howpublished = {https://www.flaticon.com/https\%3A\%2F\%2Fwww.flaticon.com\%2F},
+  langid = {english}
+}
+
+@misc{FreepikDownloadFree,
+  title = {Freepik: {{Download Free Videos}}, {{Vectors}}, {{Photos}}, and {{PSD}}},
+  shorttitle = {Freepik},
+  journal = {Freepik},
+  urldate = {2023-10-03},
+  abstract = {Millions of Free Graphic Resources. \ding{51} Videos \ding{51}Vectors \ding{51} Photos \ding{51} PSD \ding{51} Icons. All that you need for your Creative Projects. \#freepik},
+  howpublished = {https://www.freepik.com},
+  langid = {english}
 }
 
 @article{fullerWhatAffectsAuthors2015,
@@ -927,6 +998,31 @@
   urldate = {2021-03-01},
   howpublished = {https://imsear.searo.who.int/},
   file = {/Users/james/Zotero/storage/38CAAKY3/imsear.searo.who.int.html}
+}
+
+@misc{ISO92412102019,
+  title = {{{ISO}} 9241-210:2019(En), {{Ergonomics}} of Human-System Interaction \textemdash{} {{Part}} 210: {{Human-centred}} Design for Interactive Systems},
+  urldate = {2023-10-06},
+  howpublished = {https://www.iso.org/obp/ui/en/\#iso:std:iso:9241:-210:ed-2:v1:en}
+}
+
+@misc{ISOInternationalOrganization2023,
+  title = {{{ISO}} - {{International Organization}} for {{Standardization}}},
+  year = {2023},
+  month = sep,
+  journal = {ISO},
+  urldate = {2023-10-03},
+  abstract = {We're ISO, the International Organization for Standardization. We develop and publish International Standards.},
+  howpublished = {https://www.iso.org/home.html},
+  langid = {english}
+}
+
+@misc{jamesrharwoodEQUATORGuidelinesWebsite2023,
+  title = {{{EQUATOR Guidelines Website}}},
+  author = {{jamesrharwood}},
+  year = {2023},
+  month = jun,
+  urldate = {2023-10-04}
 }
 
 @article{jinDoesMedicalLiterature2018,
@@ -1393,12 +1489,34 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Nedovic et al_2016_Evaluation of the Endorsement of the STrengthening the REporting of Genetic.pdf}
 }
 
+@misc{NHSWebsite2018,
+  title = {The {{NHS}} Website},
+  year = {16 Aug 2018, 12:27 a.m.},
+  journal = {nhs.uk},
+  urldate = {2023-10-03},
+  abstract = {Find information and advice on health conditions, symptoms, healthy living, medicines and how to get help.},
+  chapter = {Homepage},
+  howpublished = {https://www.nhs.uk/},
+  langid = {english}
+}
+
 @misc{NICEClinicalGuidelines,
   title = {{{NICE}} Clinical Guidelines | {{Tools}} and Resources | {{The}} Guidelines Manual | {{Guidance}} | {{NICE}}},
   publisher = {{NICE}},
   urldate = {2023-01-10},
   abstract = {The guidelines manual},
   howpublished = {https://www.nice.org.uk/process/pmg6/resources/how-nice-clinical-guidelines-are-developed-an-overview-for-stakeholders-the-public-and-the-nhs-2549708893/chapter/nice-clinical-guidelines},
+  langid = {english}
+}
+
+@misc{NICENationalInstitute,
+  type = {{{CorporatePage}}},
+  title = {{{NICE}} | {{The National Institute}} for {{Health}} and {{Care Excellence}}},
+  journal = {NICE},
+  publisher = {{NICE}},
+  urldate = {2023-10-03},
+  abstract = {NICE helps practitioners and commissioners get the best care to patients, fast, while ensuring value for the taxpayer.},
+  howpublished = {https://www.nice.org.uk/},
   langid = {english}
 }
 
@@ -1456,6 +1574,13 @@
   keywords = {CONSORT,CONSORT compliance,CONSORT implementation,Dental journal,Orthodontics,Reporting of RCTs}
 }
 
+@misc{PastelFastestVisual,
+  title = {Pastel | {{Fastest}} Visual Website Feedback Tool for Web Designers, Developers and Agencies},
+  urldate = {2023-10-03},
+  abstract = {Pastel is the easiest, and fastest way for web designers, developers, and agencies to collect feedback on the websites they're building.},
+  howpublished = {https://usepastel.com/}
+}
+
 @misc{PenelopeAi,
   title = {Penelope.Ai},
   journal = {Penelope.ai},
@@ -1464,6 +1589,15 @@
   howpublished = {https://www.penelope.ai},
   langid = {american},
   file = {/Users/james/Zotero/storage/HK8U72WF/www.penelope.ai.html}
+}
+
+@misc{PersonasHealthEducation,
+  title = {Personas | {{Health Education England}}},
+  journal = {Health Education England | Digital Transformation},
+  urldate = {2023-10-06},
+  abstract = {Persona's have been created to showcase the types of individuals who can use the framework.},
+  howpublished = {https://digital-transformation.hee.nhs.uk/building-a-digital-workforce/dart-ed/horizon-scanning/ai-and-digital-healthcare-technologies/applying-the-framework-and-next-steps/personas},
+  langid = {english}
 }
 
 @article{phillipsa.PilotTestingGuideline2015,
@@ -1957,6 +2091,19 @@
   pmid = {17941715},
   keywords = {Case-Control Studies,Cohort Studies,Cross-Sectional Studies,Epidemiologic Research Design,Guidelines as Topic,Observation,Publishing},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Vandenbroucke et al_2007_Strengthening the Reporting of Observational Studies in Epidemiology (STROBE)2.pdf}
+}
+
+@inproceedings{velsenPersonasLinkingPin2012,
+  title = {Personas: {{The Linking Pin}} in {{Holistic Design}} for {{eHealth}}},
+  shorttitle = {Personas},
+  booktitle = {{{eTELEMED}} 2012 : {{The Fourth International Conference}} on {{eHealth}}, {{Telemedicine}}, and {{Social Medicine}}},
+  author = {van Velsen, Lex Stefan and van {Gemert-Pijnen}, Julia E. W. C. and Nijland, N. and Beaujean, Desir{\'e}e and van Steenbergen, Jim},
+  year = {2012},
+  month = jan,
+  pages = {128--133},
+  urldate = {2023-10-06},
+  langid = {english},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Velsen et al_2012_Personas.pdf}
 }
 
 @article{vilaroAdherenceReportingGuidelines2019,
