split intro into sections

--- a/references.bib
+++ b/references.bib
@@ -206,6 +206,26 @@
   file = {/Users/james/Zotero/storage/K9HP88AE/Babatunde et al_2020_Development and Usability Testing of a Web-Based and Therapist-Assisted Coping.pdf;/Users/james/Zotero/storage/ZMKQDHK6/Babatunde et al_2020_Development and Usability Testing of a Web-Based and Therapist-Assisted Coping.pdf;/Users/james/Zotero/storage/J6NNWBRK/e17088.html}
 }
 
+@article{bakerTwoYearsLater2014,
+  title = {Two {{Years Later}}: {{Journals Are Not Yet Enforcing}} the {{ARRIVE Guidelines}} on {{Reporting Standards}} for {{Pre-Clinical Animal Studies}}},
+  shorttitle = {Two {{Years Later}}},
+  author = {Baker, David and Lidster, Katie and Sottomayor, Ana and Amor, Sandra},
+  year = {2014},
+  month = jan,
+  journal = {PLOS Biology},
+  volume = {12},
+  number = {1},
+  pages = {e1001756},
+  publisher = {{Public Library of Science}},
+  issn = {1545-7885},
+  doi = {10.1371/journal.pbio.1001756},
+  urldate = {2023-10-11},
+  abstract = {A study by David Baker and colleagues reveals poor quality of reporting in pre-clinical animal research and a failure of journals to implement the ARRIVE guidelines.},
+  langid = {english},
+  keywords = {Animal models,Animal models of disease,Animal studies,Experimental design,Medical journals,Research reporting guidelines,Scientific publishing,Statistical data},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Baker et al_2014_Two Years Later.pdf}
+}
+
 @article{bandInterventionPlanningDigital2017a,
   title = {Intervention Planning for a Digital Intervention for Self-Management of Hypertension: A Theory-, Evidence- and Person-Based Approach},
   shorttitle = {Intervention Planning for a Digital Intervention for Self-Management of Hypertension},
@@ -269,6 +289,24 @@
   langid = {english},
   pmid = {12513067},
   keywords = {Algorithms,Bias,Clinical Trials as Topic,Diagnostic Techniques and Procedures,Publishing,Reference Standards,Reproducibility of Results,Research Design,Sensitivity and Specificity,Statistics as Topic}
+}
+
+@article{botosReportedUseReporting2018a,
+  title = {Reported Use of Reporting Guidelines among {{JNCI}}: {{Journal}} of the {{National Cancer Institute}} Authors, Editorial Outcomes, and Reviewer Ratings Related to Adherence to Guidelines and Clarity of Presentation},
+  shorttitle = {Reported Use of Reporting Guidelines among {{JNCI}}},
+  author = {Botos, Jeannine},
+  year = {2018},
+  month = sep,
+  journal = {Research Integrity and Peer Review},
+  volume = {3},
+  number = {1},
+  pages = {7},
+  issn = {2058-8615},
+  doi = {10.1186/s41073-018-0052-4},
+  urldate = {2023-10-11},
+  abstract = {Associations were examined between author-reported uses of reporting guidelines to prepare JNCI: Journal of the National Cancer Institute (JNCI) submissions, editorial decisions, and reviewer ratings for adherence to reporting guidelines and clarity of presentation.},
+  keywords = {Adherence,Clarity,Editorial decisions,Peer review,Presentation,Reporting guidelines,Submissions},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Botos_2018_Reported use of reporting guidelines among JNCI.pdf}
 }
 
 @article{bradshawEmployingQualitativeDescription2017,
@@ -1337,6 +1375,12 @@
   file = {/Users/james/Zotero/storage/3RNGGXPU/McDonough et al_Familiarity of Non-industry Authors With Good Publication Practice and Clinical.pdf;/Users/james/Zotero/storage/EH9LYLMS/McDonough J. et al_2011_Familiarity of non-industry authors with good publication practice and clinical.pdf}
 }
 
+@misc{MedRxivOrgPreprint,
+  title = {{{medRxiv}}.Org - the Preprint Server for {{Health Sciences}}},
+  urldate = {2023-10-17},
+  howpublished = {https://www.medrxiv.org/}
+}
+
 @article{michieBehaviorChangeTechnique2013,
   title = {The Behavior Change Technique Taxonomy (v1) of 93 Hierarchically Clustered Techniques: Building an International Consensus for the Reporting of Behavior Change Interventions},
   shorttitle = {The Behavior Change Technique Taxonomy (v1) of 93 Hierarchically Clustered Techniques},
@@ -1571,7 +1615,8 @@
   urldate = {2023-09-22},
   langid = {english},
   pmid = {24837296},
-  keywords = {CONSORT,CONSORT compliance,CONSORT implementation,Dental journal,Orthodontics,Reporting of RCTs}
+  keywords = {CONSORT,CONSORT compliance,CONSORT implementation,Dental journal,Orthodontics,Reporting of RCTs},
+  file = {/Users/james/Zotero/storage/KY4S9EWB/Pandis et al. - 2014 - Active implementation strategy of CONSORT adherenc.pdf}
 }
 
 @misc{PastelFastestVisual,
@@ -1779,6 +1824,23 @@
   abstract = {Literature searches underlie the foundations of systematic reviews and related review types. Yet, the literature searching component of systematic reviews and related review types is often poorly reported. Guidance for literature search reporting has been diverse, and, in many cases, does not offer enough detail to authors who need more specific information about reporting search methods and information sources in a clear, reproducible way. This document presents the PRISMA-S (Preferred Reporting Items for Systematic reviews and Meta-Analyses literature search extension) checklist, and explanation and elaboration.},
   keywords = {\_tablet,*information retrieval,*reproducibility,article,Delphi study,editor,human,Information retrieval,Literature search,Preferred Reporting Items for Systematic Reviews and Meta-Analyses,Reporting guidelines,Reproducibility,Search strategies,systematic review,Systematic reviews},
   file = {/Users/james/Zotero/storage/Y3QY5AYA/Rethlefsen et al_2021_PRISMA-S.pdf;/Users/james/Zotero/storage/XRXPDC8Z/s13643-020-01542-z.html}
+}
+
+@incollection{robertsEstablishingCoherentReporting2014,
+  title = {Establishing a {{Coherent Reporting Guidelines Policy}} in {{Health Journals}}},
+  booktitle = {Guidelines for {{Reporting Health Research}}: {{A User}}'s {{Manual}}},
+  author = {Roberts, Jason L. and Houle, Timothy T. and Loder, Elizabeth W. and Penzien, Donald B. and Turner, Dana P. and Rothrock, John F.},
+  editor = {Moher, David and Altman, Douglas G. and Schulz, Kenneth F. and Simera, Iveta and Wager, Elizabeth},
+  year = {2014},
+  month = jul,
+  edition = {1},
+  pages = {308--317},
+  publisher = {{Wiley}},
+  doi = {10.1002/9781118715598.ch29},
+  urldate = {2023-10-11},
+  isbn = {978-0-470-67044-6 978-1-118-71559-8},
+  langid = {english},
+  file = {/Users/james/Zotero/storage/4P2Q9DPH/Roberts et al. - 2014 - Establishing a Coherent Reporting Guidelines Polic.pdf}
 }
 
 @article{rogersLocatingQualitativeStudies2018,
