revise intro and reflexivity

--- a/references.bib
+++ b/references.bib
@@ -96,6 +96,22 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Altman et al_2012_Reporting Recommendations for Tumor Marker Prognostic Studies (REMARK).pdf}
 }
 
+@article{altmanRevisedCONSORTStatement2001,
+  title = {The {{Revised CONSORT Statement}} for {{Reporting Randomized Trials}}: {{Explanation}} and {{Elaboration}}},
+  shorttitle = {The {{Revised CONSORT Statement}} for {{Reporting Randomized Trials}}},
+  author = {Altman, Douglas G. and Schulz, Kenneth F. and Moher, David and Egger, Matthias and Davidoff, Frank and Elbourne, Diana and G{\o}tzsche, Peter C. and Lang, Thomas},
+  year = {2001},
+  month = apr,
+  journal = {Annals of Internal Medicine},
+  volume = {134},
+  number = {8},
+  pages = {663--694},
+  publisher = {{American College of Physicians}},
+  issn = {0003-4819},
+  doi = {10.7326/0003-4819-134-8-200104170-00012},
+  urldate = {2023-10-23}
+}
+
 @misc{alvesGlobalIndexMedicus,
   title = {Global {{Index Medicus}} \textendash{} {{World Health Organization}}},
   author = {Alves, BIREME / OPAS / OMS-M{\'a}rcio},
@@ -261,6 +277,23 @@
   pmid = {23990867},
   keywords = {Abstracting and Indexing,Bibliometrics,Case-Control Studies,Cohort Studies,Cross-Sectional Studies,Dermatology,Observational Studies as Topic,Publishing,Regression Analysis,Reproducibility of Results,Research Design,Time Factors},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Bastuji-Garin et al_2013_Impact of STROBE statement publication on quality of observational study.pdf}
+}
+
+@article{beggImprovingQualityReporting1996,
+  title = {Improving the {{Quality}} of {{Reporting}} of {{Randomized Controlled Trials}}: {{The CONSORT Statement}}},
+  shorttitle = {Improving the {{Quality}} of {{Reporting}} of {{Randomized Controlled Trials}}},
+  author = {Begg, Colin and Cho, Mildred and Eastwood, Susan and Horton, Richard and Moher, David and Olkin, Ingram and Pitkin, Roy and Rennie, Drummond and Schulz, Kenneth F. and Simel, David and Stroup, Donna F.},
+  year = {1996},
+  month = aug,
+  journal = {JAMA},
+  volume = {276},
+  number = {8},
+  pages = {637--639},
+  issn = {0098-7484},
+  doi = {10.1001/jama.1996.03540080059030},
+  urldate = {2021-02-08},
+  abstract = {THE RANDOMIZED controlled trial (RCT), more than any other methodology, can have a powerful and immediate impact on patient care. Ideally, the report of such an evaluation needs to convey to the reader relevant information concerning the design, conduct, analysis, and generalizability of the trial. This information should provide the reader with the ability to make informed judgments regarding the internal and external validity of the trial. Accurate and complete reporting also benefits editors and reviewers in their deliberations regarding submitted manuscripts. For RCTs to ultimately benefit patients, the published report should be of the highest possible standard.For editorial comment see p 649.Evidence produced repeatedly over the last 30 years indicates a wide chasm between what a trial should report and what is actually published in the literature. In a review of 71 RCTs with negative results published between 1960 and 1975, the authors reported that the vast},
+  file = {/Users/james/Zotero/storage/DUMK8RWZ/407167.html}
 }
 
 @misc{biernerMarkdownPreviewMermaid2022,
@@ -1031,6 +1064,36 @@
   file = {/Users/james/Zotero/storage/CWBSXNFP/Hopewell et al_2016_Impact of a web-based tool (WebCONSORT) to improve the reporting of randomised.pdf;/Users/james/Zotero/storage/ZK3NGUZ5/s12916-016-0736-x.html}
 }
 
+@article{howellEffectSQUIREStandards2015,
+  title = {The Effect of the {{SQUIRE}} ({{Standards}} of {{QUality Improvement Reporting Excellence}}) Guidelines on Reporting Standards in the Quality Improvement Literature: A before-and-after Study},
+  shorttitle = {The Effect of the {{SQUIRE}} ({{Standards}} of {{QUality Improvement Reporting Excellence}}) Guidelines on Reporting Standards in the Quality Improvement Literature},
+  author = {Howell, Victoria and Schwartz, Amanda Eva and O'Leary, James Daniel and Donnell, Conor Mc},
+  year = {2015},
+  month = jun,
+  journal = {BMJ Quality \& Safety},
+  volume = {24},
+  number = {6},
+  pages = {400--406},
+  publisher = {{BMJ Publishing Group Ltd}},
+  issn = {2044-5415, 2044-5423},
+  doi = {10.1136/bmjqs-2014-003737},
+  urldate = {2020-12-05},
+  abstract = {Background The SQUIRE (Standards of QUality Improvement Reporting Excellence) guidelines were developed to improve the reporting of quality improvement (QI) projects. The effect of the guidelines on the completeness of reporting in the QI literature is unknown. Objectives Our primary objective was to determine if the completeness of reporting in the QI literature has been improved[OUP\_CE13] since the introduction of the SQUIRE guidelines. Methods We performed a before-and-after evaluation of QI articles selected from four prominent journals of healthcare quality. Twenty-five articles published in each of two time periods (2006\textendash 2008 and 2010\textendash 2011) were confirmed to be QI projects using a standardised definition and were independently evaluated by two investigators as an interim evaluation of a planned larger sample. Articles were assessed using 50 statements of the SQUIRE guidelines, and the overall change in the completeness of reporting between the two groups was determined. The value of p{$<$}0.05 was considered significant. Results Both groups were similar in characteristics. There was no significant difference in the mean (SD) number of SQUIRE statements completed by authors before and after publication of the SQUIRE guidelines, 20.2 (5.0) versus 20.4 (7.0), p=0.9. The study was stopped early due to the absence of any significant trend in the completeness of reporting. Discussion There was no overall improvement observed in the completeness of reporting of QI projects after the publication of the SQUIRE guidelines, and the study was stopped early. There is potential for improvement in reporting standards, particularly for those guideline items or statements specific to QI projects.},
+  chapter = {Research and reporting methodology},
+  copyright = {Published by the BMJ Publishing Group Limited. For permission to use (where not already granted under a licence) please go to http://ezproxy-prd.bodleian.ox.ac.uk:4140/group/rights-licensing/permissions},
+  langid = {english},
+  pmid = {25678444},
+  keywords = {Healthcare quality improvement,Quality improvement,Quality improvement methodologies},
+  file = {/Users/james/Zotero/storage/IZKCK4T9/Howell et al_2015_The effect of the SQUIRE (Standards of QUality Improvement Reporting.pdf;/Users/james/Zotero/storage/6HI3NYQM/400.html;/Users/james/Zotero/storage/T3D2NEJY/400.html}
+}
+
+@misc{ICMJERecommendationsPreparing,
+  title = {{{ICMJE}} | {{Recommendations}} | {{Preparing}} a {{Manuscript}} for {{Submission}} to a {{Medical Journal}}},
+  urldate = {2021-02-08},
+  howpublished = {http://www.icmje.org/recommendations/browse/manuscript-preparation/preparing-for-submission.html\#two},
+  file = {/Users/james/Zotero/storage/Y8N6CA4N/preparing-for-submission.html}
+}
+
 @misc{IMSEARSEAROHome,
   title = {{{IMSEAR}} at {{SEARO}}: {{Home}}},
   urldate = {2021-03-01},
@@ -1156,6 +1219,24 @@
   pmid = {27686751},
   keywords = {\_tablet},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Kim et al_2017_Characteristics of Qualitative Descriptive Studies.pdf}
+}
+
+@article{kochExplicitMentioningReporting2016,
+  title = {The Explicit Mentioning of Reporting Guidelines in Urogynecology Journals in 2013: {{A}} Bibliometric Study},
+  shorttitle = {The Explicit Mentioning of Reporting Guidelines in Urogynecology Journals in 2013},
+  author = {Koch, Marianne and Riss, Paul and Umek, Wolfgang and Hanzal, Engelbert},
+  year = {2016},
+  month = mar,
+  journal = {Neurourology and Urodynamics},
+  volume = {35},
+  number = {3},
+  pages = {412--416},
+  issn = {1520-6777},
+  doi = {10.1002/nau.22726},
+  abstract = {AIMS: Poor reporting of research may limit critical appraisal and reproducibility, whereas adherence to reporting guidelines (RG) can guarantee completeness and transparency. We aimed to determine the explicit citing of RGs (CONSORT, PRISMA, STROBE) in urogynecology articles in 2013, the requirements of relevant journals and a potential difference between urogynecology and general gynecology journals. METHODS: All urogynecologic articles published between January and December 2013 in the journals NAU, IUJ, FPMRS, GREEN, AJOG, and BJOG were included. Issues were searched for systematic reviews, RCTs, cohort studies, case-control studies and cross-sectional studies. Each electronic article was searched for the term PRISMA, CONSORT, or STROBE according to the study design. Instructions to Authors of the six journals were screened for requirement of using RGs. RESULTS: We included 296 articles (243 observational studies, 40 RCTs, and 13 systematic reviews). The use of PRISMA guidelines was explicitly declared in 54\% of systematic reviews, CONSORT guidelines were referenced in 25\% of RCTs and STROBE in 1.2\% of observational studies. The use of CONSORT is required by all journals except FPMRS. PRISMA and STROBE are only compulsory in the journals GREEN, AJOG, and BJOG. The overall rate of explicit mentioning of RGs comparing urogynecology and general gynecology journals was 6.7\% versus 7.1\%, respectively. CONCLUSIONS: The explicit mentioning of RGs was on a relatively low level. A slightly higher adherence was recognized among general gynecology journals compared to urogynecology journals. Stronger efforts should be taken to further promote the use of RGs in urogynecology.},
+  langid = {english},
+  pmid = {25620401},
+  keywords = {Bibliometrics,Biomedical Research,CONSORT,Female,Guideline Adherence,Gynecology,Humans,Periodicals as Topic,Practice Guidelines as Topic,PRISMA,reporting guidelines,research design,Research Design,STROBE,urogynecology,Urology}
 }
 
 @article{korevaarUpdatingStandardsReporting2016,
@@ -1301,7 +1382,7 @@
   langid = {english},
   keywords = {Authorship,Ethics,Funding,Journalism,Publishing},
   annotation = {Bandiera\_abtest: a Cc\_license\_type: cc\_by Cg\_type: Nature Research Journals Primary\_atype: Research Subject\_term: Authorship;Ethics;Funding;Journalism;Publishing Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
-  file = {/Users/james/Zotero/storage/VXRE5YAV/Malički et al_2021_Systematic review and meta-analyses of studies analysing instructions to.pdf;/Users/james/Zotero/storage/4KQ6YQUR/s41467-021-26027-y.html}
+  file = {/Users/james/Zotero/storage/88J9B5RE/Malički et al. - 2021 - Systematic review and meta-analyses of studies ana.pdf;/Users/james/Zotero/storage/VXRE5YAV/Malički et al_2021_Systematic review and meta-analyses of studies analysing instructions to.pdf;/Users/james/Zotero/storage/4KQ6YQUR/s41467-021-26027-y.html}
 }
 
 @article{malterudQualitativeResearchStandards2001,
@@ -1950,6 +2031,21 @@
   file = {/Users/james/Zotero/storage/M3AFIVQF/Sert et al_2020_The ARRIVE guidelines 2.pdf;/Users/james/Zotero/storage/RAP6P9M7/Sert et al_2020_The ARRIVE guidelines 2.pdf;/Users/james/Zotero/storage/SE52QGDJ/Sert et al_2020_The ARRIVE guidelines 2.pdf;/Users/james/Zotero/storage/6NJQLQXU/article.html;/Users/james/Zotero/storage/XWQBY866/article.html}
 }
 
+@article{sharpCrosssectionalBibliometricStudy2019,
+  title = {A Cross-Sectional Bibliometric Study Showed Suboptimal Journal Endorsement Rates of {{STROBE}} and Its Extensions},
+  author = {Sharp, Melissa K and Tokali{\'c}, Ru{\v z}ica and G{\'o}mez, Guadalupe and Wager, Elizabeth and Altman, Douglas G and Hren, Darko},
+  year = {2019},
+  journal = {Journal of clinical epidemiology},
+  volume = {107},
+  pages = {42--50},
+  publisher = {{Elsevier Inc}},
+  issn = {0895-4356},
+  abstract = {{$<$}p{$>$}The STrengthening the Reporting of Observational Studies in Epidemiology (STROBE) statement provides guidance on reporting observational studies. Many extensions have been created for specialized methods or fields. We determined endorsement prevalence and typology by journals in extension-related fields.{$<$}/p{$>$} {$<$}p{$>$}A published protocol defined search strategies to identify journals publishing observational studies (2007\textendash 2017) across seven fields relating to STROBE extensions. We extracted text regarding STROBE, seven STROBE extensions, reporting guidelines Consolidated Standards of Reporting Trials and Preferred Reporting Items for Systematic Reviews and Meta-Analyses, and transparent reporting documents/groups: International Committee of Medical Journal Editors, Committee on Publication Ethics (COPE), and the Enhancing the QUAlity and Transparency Of health Research (EQUATOR) networks. Relationships between endorsing STROBE, endorsing other guidelines, and journal impact...},
+  langid = {english},
+  keywords = {Epidemiologic Research Design,Guidelines As Topic,Information Dissemination/Methods,Medicine,Observational Studies,Reporting Guidelines,Strobe},
+  file = {/Users/james/Zotero/storage/J94WNQL3/Sharp et al_2019_A cross-sectional bibliometric study showed suboptimal journal endorsement.pdf;/Users/james/Zotero/storage/Q55ADG5Z/Sharp et al. - 2019 - A cross-sectional bibliometric study showed subopt.pdf;/Users/james/Zotero/storage/JK7SDAP2/S0895435618305377.html;/Users/james/Zotero/storage/LX2VE9W8/S0895435618305377.html}
+}
+
 @article{sharpOnlineSurveySTROBE2020,
   title = {Online Survey about the {{STROBE}} Statement Highlighted Diverging Views about Its Content, Purpose, and Value},
   author = {Sharp, Melissa K and Glonti, Ketevan and Hren, Darko},
@@ -2294,4 +2390,19 @@
   abstract = {During the COVID-19 pandemic, the scientific world is in urgent need for new evidence on the treatment of COVID patients. The reporting quality is crucial for transparent scientific publication. Concerns of data integrity, methodology and transparency were raised. Here, we assessed the adherence of observational studies comparing treatments of COVID 19 to the STROBE checklist in 2020.},
   keywords = {COVID-19,Observational studies,Reporting quality,STROBE statement},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Ziemann et al_2022_Poor reporting quality of observational clinical studies comparing treatments.pdf}
+}
+
+@article{obrien2014,
+	title = {Standards for Reporting Qualitative Research: A Synthesis of Recommendations},
+	author = {{O{\textquoteright}Brien}, Bridget C. and Harris, Ilene B. and Beckman, Thomas J. and Reed, Darcy A. and Cook, David A.},
+	year = {2014},
+	month = {09},
+	date = {2014-09},
+	journal = {Academic Medicine},
+	pages = {1245{\textendash}1251},
+	volume = {89},
+	number = {9},
+	doi = {10.1097/ACM.0000000000000388},
+	url = {https://journals.lww.com/academicmedicine/fulltext/2014/09000/Standards_for_Reporting_Qualitative_Research__A.21.aspx},
+	langid = {canadian}
 }
